crates/safix/src/snapshots/safix__reporter__tests__graphical-stanza_unreadable.snap
---
source: crates/safix/src/reporter.rs
expression: render_graphical(&refusal)
---
safix::stanza_unreadable

  × a sops age stanza names no recipient
