crates/safix/src/snapshots/safix__reporter__tests__graphical-store_command_failed.snap
---
source: crates/safix/src/reporter.rs
expression: render_graphical(&refusal)
---
safix::store_command_failed

  × the store's own command refused over the entry 'safix/alice/grafana'.
  │ 
  │ It was run as:
  │ 
  │     keepassxc-cli add --quiet --password-prompt /home/alice/.keys/
  │ master.kdbx safix/alice/grafana
  │ 
  │ No value is in that line: the database's password and the entry's both
  │ travel standard input. The command said:
  │ 
  │ Could not create entry with path safix/alice/grafana.
