crates/safix/src/snapshots/safix__reporter__tests__graphical-store_mirror_failed.snap
---
source: crates/safix/src/reporter.rs
expression: render_graphical(&refusal)
---
safix::store_mirror_failed

  × the password store's own command exited 1, so the credentials are not
  │ there:
  │ Invalid credentials.
  │ 
  │ The card is enrolled and everything else is committed. This is a copy that
  │ was not made, not a step that failed halfway.
