crates/safix/src/snapshots/safix__reporter__tests__graphical-store_pipe_missing.snap
---
source: crates/safix/src/reporter.rs
expression: render_graphical(&refusal)
---
safix::store_pipe_missing

  × the store's own command was started without the pipe its value travels
