crates/safix/src/snapshots/safix__reporter__tests__graphical-store_unavailable.snap
---
source: crates/safix/src/reporter.rs
expression: render_graphical(&refusal)
---
safix::store_unavailable

  × could not run secret-tool, so the credentials were not mirrored
  ╰─▶ entity not found
